--- a/BrainBank13.html
+++ b/BrainBank13.html
@@ -93,7 +93,7 @@
                                                                                                                                                     </p>
                                                                                                                                                     <p style="line-height: 22px; margin-top: 0px; margin-bottom: 0px;">
                                                                                                                                                         <font color="#000000" face="trebuchet ms, sans-serif">
-                                                                                                                                                            This might be my best memo yet btw. I'll let you be the judge.&nbsp;
+                                                                                                                                                            &nbsp;
                                                                                                                                                         </font>
                                                                                                                                                     </p>
                                                                                                                                                     <p style="line-height: 22px; margin-top: 0px; margin-bottom: 0px;">
