--- a/BrainBank#021.html
+++ b/BrainBank#021.html
@@ -31,7 +31,7 @@
                                                                                             "
                                                                                         >
                                                                                             <div class="gmail-container" style="display: flex;">
-                                                                                                <font color="#ffffff">Electile Dysfunction, Extreme Language Learning, &amp; Resources for Extensive World Travel</font>
+                                                                                                <font color="#ffffff"></font>
                                                                                             </div>
                                                                                         </h3>
 
